<resources>
    <string name="app_name">trivia app</string>
    <string name="title_text">Trivia</string>
    <string name="out_of_text">Question: 45/89</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="next_button">Next</string>
    <string name="placeholder">Hello world this is where going to add the actual text to shown</string>
    <string name="incorrect">Incorrect</string>
    <string name="correct">Correct</string>
</resources>